force-app/main/default/objects/Account_Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product Code</description>
    <inlineHelpText>Product Code</inlineHelpText>
    <label>Product Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>