force-app/main/default/objects/Account_Product__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <description>Unique identifier for the product</description>
    <inlineHelpText>Unique identifier for the product</inlineHelpText>
    <label>Product Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>