force-app/main/default/objects/Account_Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the product</description>
    <inlineHelpText>Current status of the product</inlineHelpText>
    <label>Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>