force-app/main/default/objects/Account_Product__c/fields/Time_Activated__c.field-meta.xml
<CustomField>
    <fullName>Time_Activated__c</fullName>
    <description>Time the product got activated in the account - This is different than the time product request was created.</description>
    <inlineHelpText>Time the product got activated in the account - This is different than the time product request was created.</inlineHelpText>
    <label>Time Activated</label>
    <type>DateTime</type>
</CustomField>