force-app/main/default/objects/Account_Product__c/fields/Time_Created__c.field-meta.xml
<CustomField>
    <fullName>Time_Created__c</fullName>
    <description>Date the product was enrolled/activated</description>
    <inlineHelpText>Date the product was enrolled/activated</inlineHelpText>
    <label>Time Created</label>
    <type>DateTime</type>
</CustomField>