force-app/main/default/objects/Account_Product__c/fields/Time_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Time_Deactivated__c</fullName>
    <description>The time the product was deactivated from account (if any)</description>
    <inlineHelpText>The time the product was deactivated from account (if any)</inlineHelpText>
    <label>Time Deactivated</label>
    <type>DateTime</type>
</CustomField>