force-app/main/default/objects/Account_Product__c/fields/Time_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Time_Last_Updated__c</fullName>
    <description>Date the product was de-activated/removed (if any)</description>
    <inlineHelpText>Date the product was de-activated/removed (if any)</inlineHelpText>
    <label>Time Last Updated</label>
    <type>DateTime</type>
</CustomField>